Spacing and responsiveness fixes.

--- a/static/app/bundle.css
+++ b/static/app/bundle.css
@@ -1,7 +1,7 @@
 .no-space-hr.svelte-1czeazl{margin:0}.custom-card-title.svelte-1czeazl{margin-bottom:2% !important;padding-top:2% !important}.controls.svelte-1czeazl{min-width:50%}
 .age-input.svelte-lbo539{width:2.5rem}.textarea-feedback.svelte-lbo539{min-width:80%;max-width:80%}
 .loader-wrapper.svelte-10ue5nm{position:absolute;height:100%;width:100%;top:0;left:0;background:#fff;display:flex;justify-content:center;align-items:center}.loader.svelte-10ue5nm{width:35rem;height:35rem;position:absolute}.loading-text.svelte-10ue5nm{z-index:9}
-.table.svelte-o2ldp3{margin-left:auto;margin-right:auto}.loading-button.svelte-o2ldp3{font-size:4.5rem !important}.blur.svelte-o2ldp3{-webkit-filter:blur(5px);filter:blur(5px);pointer-events:none}.modal-card.svelte-o2ldp3{border-radius:6px;box-shadow:3px 3px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);pointer-events:auto}.highlight>.svelte-o2ldp3{filter:blur(0);-webkit-filter:blur(0)}.modal.svelte-o2ldp3{pointer-events:none}.down.svelte-o2ldp3{top:15%}.up.svelte-o2ldp3{top:-15%}.upp.svelte-o2ldp3{top:-21%}.right.svelte-o2ldp3{left:12%}.button-row.svelte-o2ldp3{padding-bottom:0}.unset-width.svelte-o2ldp3{width:unset !important}
+.table.svelte-iib1zu{margin-left:auto;margin-right:auto}.loading-button.svelte-iib1zu{font-size:4.5rem !important}.blur.svelte-iib1zu{-webkit-filter:blur(5px);filter:blur(5px);pointer-events:none}.modal-card.svelte-iib1zu{border-radius:6px;box-shadow:3px 3px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);pointer-events:auto}.modal.svelte-iib1zu{pointer-events:none}.down.svelte-iib1zu{top:15%}.up.svelte-iib1zu{top:-15%}.upp.svelte-iib1zu{top:-21%}.right.svelte-iib1zu{left:12%}.button-row.svelte-iib1zu{margin-bottom:0 !important}.button-col.svelte-iib1zu{padding-bottom:0 !important}
 .hidden.svelte-1k5bkci{visibility:hidden}.table.svelte-1k5bkci{margin-left:auto;margin-right:auto}.loading-button.svelte-1k5bkci{font-size:4.5rem !important}
 
 /*# sourceMappingURL=bundle.css.map */
